# biometric-recognition

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/: Dockerfile  requirements-airflow.txt
airflow/dags/: biometric_training_dag.py
configs/: config.yaml
k8s/: deployment.yaml  service.yaml
src/biometric_recognition/: __init__.py  train.py
src/biometric_recognition/api/: __init__.py  schema.py  serve.py
src/biometric_recognition/data/: __init__.py  dataset.py  dataset_ray.py
src/biometric_recognition/models/: __init__.py  branches.py  multimodal_model.py
src/biometric_recognition/pipeline/: __init__.py  data_prep.py  evaluate.py  train.py  upload.py
src/biometric_recognition/utils/: __init__.py  aws_utils.py  data_utils.py  device_utils.py  image_utils.py  logging_utils.py  metrics_utils.py  mlflow_utils.py  model_utils.py  training_utils.py
terraform/: ecr.tf  outputs.tf  s3.tf  variables.tf
tests/: __init__.py  conftest.py  test_api_schema.py  test_branches.py  test_data_utils.py  test_device_utils.py  test_image_utils.py  test_metrics_utils.py  test_model_utils.py  test_multimodal_model.py
